setup-lb-onprem/configs/dep-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: react
          image: nginx   # update this
          ports:
            - containerPort: 80
