setup-lb-onprem/configs/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
#    - host: portforlio.dev
    - http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
